--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:padding="16dp"
-    android:background="@color/light_black">
+    android:background="@color/white_bg">
 
     <LinearLayout
         android:id="@+id/user_top"
@@ -28,9 +28,9 @@
             android:layout_gravity="center"
             android:text="@string/hi"
             android:textSize="24sp"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/urbanist_medium"
             android:layout_marginHorizontal="8dp"
-            android:textColor="@color/white"
+            android:textColor="@color/light_black"
             />
 
         <TextView
@@ -39,156 +39,126 @@
             android:layout_gravity="center"
             android:text="@string/user"
             android:textSize="24sp"
-            android:fontFamily="@font/poppins_medium"
-            android:textColor="@color/white"
-            />
-
+            android:fontFamily="@font/urbanist_bold"
+            android:textColor="@color/light_black" />
     </LinearLayout>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/balance_cv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_top"
-        android:backgroundTint="@color/gold"
-        android:layout_marginTop="32dp"
-        app:cardCornerRadius="20dp"
-        app:strokeWidth="0dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/balance"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_marginTop="30dp"
-                android:fontFamily="@font/poppins_medium"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/money"
-                android:textColor="@color/light_green"
-                android:textSize="24sp"
-                android:fontFamily="@font/poppins_bold" />
-
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/give_tips"
-                android:textColor="@color/black"
-                android:fontFamily="@font/poppins_medium"
-                android:layout_marginBottom="30dp"
-                app:cornerRadius="10dp"
-                android:backgroundTint="@color/beige" />
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/tips_cv"
+    <TextView
+        android:id="@+id/tv_balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/balance_cv"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/white"
+        android:fontFamily="@font/urbanist_medium"
+        android:text="@string/balance"
+        android:textColor="@color/light_black"
+        android:textSize="16sp"
         android:layout_marginTop="24dp"
-        app:cardCornerRadius="20dp"
-        app:contentPadding="30dp"
-        android:backgroundTint="@color/light_gray"
-        app:strokeWidth="0dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/baseline_money_24"
-                android:layout_gravity="center"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_light"
-                android:text="@string/total_tips"
-                android:textColor="@color/dark_gray"
-                android:textSize="16sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/outcome"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_bold"
-                android:textSize="16sp"
-                android:textColor="@color/black"/>
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/user_top" />
 
     <TextView
-        android:id="@+id/recently"
+        android:id="@+id/tv_balance_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/urbanist_semibold"
+        android:text="@string/money"
+        android:textColor="@color/light_black"
+        android:textSize="32sp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tips_cv"
-        android:text="@string/recently"
-        android:fontFamily="@font/poppins_light"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:layout_marginTop="24dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_balance" />
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/recently"
+        app:layout_constraintTop_toBottomOf="@id/tv_balance_value"
         app:layout_constraintStart_toStartOf="parent"
-        app:cardCornerRadius="20dp"
-        android:backgroundTint="@color/white"
-        app:contentPadding="16dp"
-        android:layout_marginTop="8dp"
-        app:strokeWidth="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/card_1"
+            android:padding="30dp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/to_user"
-                android:textSize="24sp"
-                android:fontFamily="@font/poppins_bold"
-                android:textColor="@color/black" />
-
+                android:text="@string/my_card"
+                android:fontFamily="@font/urbanist_light"
+                android:textColor="@color/white"
+                android:textSize="16sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/date"
-                android:textSize="12sp"
-                android:fontFamily="@font/poppins_light"
-                android:textColor="@color/dark_gray"/>
-
+                android:layout_marginTop="24dp"
+                android:text="@string/card_number"
+                android:fontFamily="@font/urbanist_semibold"
+                android:textColor="@color/white"
+                android:textSize="24sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/message"
-                android:textSize="16sp"
-                android:fontFamily="@font/poppins_medium"
-                android:textColor="@color/black"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="32dp"
+                android:text="@string/full_name"
+                android:fontFamily="@font/urbanist_regular"
+                android:textColor="@color/white"
+                android:textSize="16sp"/>
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
+    <LinearLayout
+        android:id="@+id/layout_kategori"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    </com.google.android.material.card.MaterialCardView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_kategori"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_category"
+            tools:itemCount="7"
+            app:spanCount="4"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
+    </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_recently"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_kategori"
+        android:layout_marginTop="16dp"
+        android:text="@string/recently"
+        android:fontFamily="@font/urbanist_semibold"
+        android:textColor="@color/light_black"
+        android:textSize="24sp" />
 
+    <TextView
+        android:id="@+id/tv_see_all"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/urbanist_light"
+        android:text="@string/see_all"
+        android:textColor="@color/light_black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/rv_transaction"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_kategori" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_transaction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_recently"
+        tools:listitem="@layout/item_transaction"
+        tools:itemCount="5"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
