--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,191 +4,142 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:padding="16dp"
-    android:background="@color/light_black">
+    tools:context=".ui.MainActivity"
+    android:padding="16dp">
 
     <LinearLayout
-        android:id="@+id/user_top"
+        android:id="@+id/top_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toTopOf="parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/avatar" />
+            android:id="@+id/civ_avatar"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/avatar"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:text="@string/hi"
-            android:textSize="24sp"
-            android:fontFamily="@font/poppins_medium"
-            android:layout_marginHorizontal="8dp"
-            android:textColor="@color/white"
-            />
+            android:textColor="@color/light_black"
+            android:fontFamily="@font/urbanist_medium"
+            android:textSize="32sp"
+            android:layout_gravity="center"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:text="@string/user"
-            android:textSize="24sp"
-            android:fontFamily="@font/poppins_medium"
-            android:textColor="@color/white"
-            />
-
+            android:textColor="@color/light_black"
+            android:fontFamily="@font/urbanist_bold"
+            android:textSize="32sp"
+            android:layout_gravity="center"/>
     </LinearLayout>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/balance_cv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_top"
-        android:backgroundTint="@color/gold"
-        android:layout_marginTop="32dp"
-        app:cardCornerRadius="20dp"
-        app:strokeWidth="0dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/balance"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_marginTop="30dp"
-                android:fontFamily="@font/poppins_medium"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/money"
-                android:textColor="@color/light_green"
-                android:textSize="24sp"
-                android:fontFamily="@font/poppins_bold" />
-
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/give_tips"
-                android:textColor="@color/black"
-                android:fontFamily="@font/poppins_medium"
-                android:layout_marginBottom="30dp"
-                app:cornerRadius="10dp"
-                android:backgroundTint="@color/beige" />
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/tips_cv"
+    <TextView
+        android:id="@+id/tv_balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/balance_cv"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/white"
-        android:layout_marginTop="24dp"
-        app:cardCornerRadius="20dp"
-        app:contentPadding="30dp"
-        android:backgroundTint="@color/light_gray"
-        app:strokeWidth="0dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/baseline_money_24"
-                android:layout_gravity="center"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_light"
-                android:text="@string/total_tips"
-                android:textColor="@color/dark_gray"
-                android:textSize="16sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/outcome"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_bold"
-                android:textSize="16sp"
-                android:textColor="@color/black"/>
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+        app:layout_constraintTop_toBottomOf="@id/top_user"
+        android:layout_marginTop="16dp"
+        android:text="@string/balance"
+        android:textColor="@color/light_black"
+        android:fontFamily="@font/urbanist_medium"
+        android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/recently"
+        android:id="@+id/tv_balance_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tips_cv"
-        android:text="@string/recently"
-        android:fontFamily="@font/poppins_light"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:layout_marginTop="24dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_balance"
+        android:layout_marginTop="8dp"
+        android:text="@string/money"
+        android:textColor="@color/light_black"
+        android:fontFamily="@font/urbanist_bold"
+        android:textSize="32sp" />
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/recently"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:cardCornerRadius="20dp"
-        android:backgroundTint="@color/white"
-        app:contentPadding="16dp"
-        android:layout_marginTop="8dp"
-        app:strokeWidth="0dp">
+        app:layout_constraintTop_toBottomOf="@id/tv_balance_value"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="@drawable/card_bg"
+            android:orientation="vertical"
+            android:padding="30dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/to_user"
-                android:textSize="24sp"
-                android:fontFamily="@font/poppins_bold"
-                android:textColor="@color/black" />
+                android:text="@string/my_card"
+                android:textColor="@color/white_bg"
+                android:fontFamily="@font/urbanist_light"
+                android:textSize="16sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/date"
-                android:textSize="12sp"
-                android:fontFamily="@font/poppins_light"
-                android:textColor="@color/dark_gray"/>
+                android:text="@string/card_number"
+                android:textColor="@color/white_bg"
+                android:fontFamily="@font/urbanist_bold"
+                android:layout_marginTop="32dp"
+                android:textSize="24sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/message"
-                android:textSize="16sp"
-                android:fontFamily="@font/poppins_medium"
-                android:textColor="@color/black"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="32dp"
+                android:text="@string/full_name"
+                android:textColor="@color/white_bg"
+                android:fontFamily="@font/urbanist_regular"
+                android:textSize="16sp"/>
+
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cv_card"
+        tools:listitem="@layout/item_categories"
+        tools:itemCount="7"
+        app:spanCount="4"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager">
+    </androidx.recyclerview.widget.RecyclerView>
 
-    </com.google.android.material.card.MaterialCardView>
+    <TextView
+        android:id="@+id/tv_recently"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rv_category"
+        android:layout_marginTop="16dp"
+        android:text="@string/recently"
+        android:textColor="@color/light_black"
+        android:fontFamily="@font/urbanist_semibold"
+        android:textSize="24sp"/>
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_transaction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_recently"
+        tools:listitem="@layout/item_transaction"
+        tools:itemCount="5"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
