--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,9 @@
 
 
     <color name="light_black">#1D2026</color>
-    <color name="grey">#2D303A</color>
+    <color name="grey">#E7E7E7</color>
     <color name="gold">#F8CF80</color>
+    <color name="white_bg">#FDFDFD</color>
 
 
 </resources>
