some other layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#E5E7E6</color>
-    <color name="green">#205137</color>
-    <color name="light_green">#B4EACD</color>
-    <color name="beige">#FFD6AE</color>
-    <color name="more_light_green">#F3FFF1</color>
     <color name="light_gray">#FAFAFA</color>
     <color name="dark_gray">#858685</color>
 
@@ -15,6 +11,7 @@
     <color name="grey">#E7E7E7</color>
     <color name="gold">#F8CF80</color>
     <color name="white_bg">#FDFDFD</color>
+    <color name="red">#ba1a1a</color>
 
 
 </resources>
